packages/ui-deprecated/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    /* black bg */
    --background: 0, 0%, 5%;
    --foreground: 0, 4%, 73%;

    /* white text */
    --muted: 0, 0%, 100%;
    /* #BDB8B8 text*/
    --muted-foreground: 0, 4%, 73%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    /* border as light-brown */
    --border: 0, 2%, 21%;
    --border-secondary: rgba(75, 75, 75, 0.5);

    --input: 214.3 31.8% 91.4%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    /* secondary btn bg  */
    --secondary: 0, 2%, 21%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;

    --text-secondary: 0, 0%, 100%;

    /* Penumbra base color palette */
    --charcoal: #1d1d1d;
    --charcoal-secondary: #141010;
    --teal: #629994;
    --sand: #847a5b;
    --rust: #8d5728;
    --teal-700: rgba(139, 228, 217, 0.7);
    --sand-700: rgba(200, 184, 128, 0.7);
    --rust-600: rgba(255, 144, 47, 0.6);
    --teal-420: rgba(139, 228, 217, 0.42);
    --sand-420: rgba(200, 184, 128, 0.42);
    --rust-420: rgba(255, 144, 47, 0.36);
    --black: #000000;
    --green: #23be4e;
    --red: #af4545;
    --light-brown: #363434;
    --light-grey: #e3e3e3;
    --brown: rgba(29, 29, 29, 0.7);

    /* Penumbra Card Gradient Stops and Background */
    --other-card-background-stop-0: rgba(250, 250, 250, 0.1);
    --other-card-background-stop-80: rgba(250, 250, 250, 0.01);
    --gradient-card-background: linear-gradient(
      136deg,
      var(--other-card-background-stop-0) 6.32%,
      var(--other-card-background-stop-80) 75.55%
    );

    /* UI Theme Variables */
    --Other-Tonal-Fill-5: rgba(250, 250, 250, 0.05);
    --Action-Hover-Overlay: rgba(83, 174, 168, 0.15);
  }

  #popup-root {
    min-width: 400px;
    min-height: 600px;
    height: 100%;
    display: flex;
    flex-direction: column;
    @apply bg-charcoal;
  }

  ::-webkit-scrollbar {
    width: 4px;
  }

  /* Track */
  ::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0.25);
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #888;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555;
  }

  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-muted min-h-screen text-[15px] leading-[22px] font-normal font-body;
  }

  @font-face {
    font-family: 'Faktum';
    font-weight: 700;
    src: url('../fonts/Faktum-Bold.woff2') format('woff2');
  }

  @font-face {
    font-family: 'Faktum';
    font-weight: 500;
    src: url('../fonts/Faktum-Medium.woff2') format('woff2');
  }

  @font-face {
    font-family: 'Faktum';
    font-weight: 600;
    src: url('../fonts/Faktum-SemiBold.woff2') format('woff2');
  }

  @font-face {
    font-family: 'Devanagari Sangam';
    font-weight: 400;
    src: url('../fonts/Devanagari-Sangam-Regular.woff2') format('woff2');
  }

  @font-face {
    font-family: 'Devanagari Sangam';
    font-weight: 700;
    src: url('../fonts/Devanagari-Sangam-Bold.woff2') format('woff2');
  }

  @font-face {
    font-family: 'Iosevka Term';
    font-weight: 400;
    src: url('../fonts/iosevka-term-ss03-regular.woff2') format('woff2');
  }

  @font-face {
    font-family: 'Iosevka Term';
    font-style: italic;
    font-weight: 400;
    src: url('../fonts/iosevka-term-ss03-italic.woff2') format('woff2');
  }

  .background-size-200 {
    background-size: 200%;
  }

  .border-mask {
    mask:
      linear-gradient(#fff 0 0) content-box,
      linear-gradient(#fff 0 0);
    mask-composite: xor;
    mask-composite: exclude;
  }
}

